[project]
name = "medical-triage-env"
version = "3.0.0"
description = "10-task emergency department triage environment for evaluating AI agents on real-world clinical workflows"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
keywords = ["medical", "triage", "openenv", "AI", "healthcare", "emergency-department"]
authors = [
    {name = "Medical Triage Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "requests==2.32.3",
    "openai>=1.51.0,<2.0.0",
    "PyYAML==6.0.2",
    "openenv-core>=0.2.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["medical_triage_env", "main", "inference"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
